refactor: 문자열 공백 제거를 isBlank 메서드 활용